--- a/index.html
+++ b/index.html
@@ -96,6 +96,125 @@
         </div>
     </div>
 
+    <div class="container">
+        <table class="table table-bordered table-hover table-condensed">
+            <thead>
+                <th>№</th>
+                <th>Ф.И.О.</th>
+                <th>&#10004;</th>
+                <th>&#9990;</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Иванов Иван Иванович</td>
+                    <td><input type="checkbox"></td>
+                    <td class="phone-btn">&#9990;</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!--PARENTS MODAL-->
+        <div class="modal fade" id="parentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Карточка ребенка</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="modal-item">
+                      <div class="people">Ребенок:</div>
+                      <div class="people-name">Иванов Иван Иванович</div>
+                  </div>
+                  <div class="modal-item">
+                    <div class="people">Родитель:</div>
+                    <div class="people-name">Иванов Иван Иванович</div>
+                    <div class="people-phone"><a href="tel:70000000000" class="modal-phone">+7 (000) 000-00-00</a></div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <!--GROUP TRANSFER-->
+        <form id="transferForm">
+            <select name="transfer" id="transfer">
+                <option value="0" selected>Выберете преподавателя:</option>
+                <option value="1">Иванов И.И.</option>
+                <option value="2">Иванов И.И.</option>
+                <option value="3">Иванов И.И.</option>
+                <option value="4">Иванов И.И.</option>
+            </select>
+            <button class="btn btn-success">Передать</button>
+        </form>
+    </div>
 
 
     <!--FOOTER-->
