--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--MAIN-->
     <div class="days-control container">
         <div class="days-week">
-            <div class="day day--active">Пн</div>
+            <div class="day">Пн</div>
             <div class="day">Вт</div>
             <div class="day">Ср</div>
             <div class="day">Чт</div>
@@ -79,7 +79,7 @@
         </div>
         <div class="time-day">
             <div class="time-control prev-time">&lt;</div>
-            <div class="time time--active">7:55</div>
+            <div class="time">7:55</div>
             <div class="time">8:35</div>
             <div class="time">9:15</div>
             <div class="time">9:55</div>
