--- a/index.html
+++ b/index.html
@@ -105,75 +105,75 @@
                 <th>&#9990;</th>
             </thead>
             <tbody>
-                <tr>
+                <tr class="kids" >
                     <td>1</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Румянцев Даниил Артёмович</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>2</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Ушаков Роман Максимович</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>3</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Александрова Эмилия Артуровна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>4</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Миронов Илья Дмитриевич</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>5</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Григорьева Полина Георгиевна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>6</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Власова Алёна Александровна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids" >
                     <td>7</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Иванов Иван Иванович</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids">
                     <td>8</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Петров Даниэль Артёмович</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids">
                     <td>9</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Дмитриев Тимофей Артёмович</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids">
                     <td>10</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Дегтярева Мария Александровна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids">
                     <td>11</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Субботина Аиша Даниловна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
-                <tr>
+                <tr class="kids">
                     <td>12</td>
-                    <td>Иванов Иван Иванович</td>
+                    <td class="kids-name">Коровина Валерия Михайловна</td>
                     <td><input type="checkbox"></td>
                     <td class="phone-btn">&#9990;</td>
                 </tr>
