--- a/index.html
+++ b/index.html
@@ -95,47 +95,21 @@
                 <button class="time-btn">10:35</button>
                 <button class="time-btn">11:15</button>
                 <button class="time-btn">11:55</button>
-                <button class="time-btn">12:35</button>
-                <button class="time-btn">13:15</button>
-                <button class="time-btn">13:55</button>
-                <button class="time-btn">14:35</button>
-                <button class="time-btn">15:15</button>
-                <button class="time-btn last">15:55</button>
+                <button class="time-btn ">12:35</button>
+                <button class="time-btn ">13:15</button>
+                <button class="time-btn ">13:55</button>
+                <button class="time-btn ">14:35</button>
+                <button class="time-btn ">15:15</button>
+                <button class="time-btn last ">15:55</button>
                 <button class="time-control next-time">&gt;</button>
             </div>
         </div>
     </div>
 
 
-    <!--div class="days-control container">
-        <div class="days-week">
-            <div class="day">Пн</div>
-            <div class="day">Вт</div>
-            <div class="day">Ср</div>
-            <div class="day">Чт</div>
-            <div class="day">Пт</div>
-            <div class="day">Сб</div>
-        </div>
-        <div class="time-day">
-            <div class="time-control prev-time">&lt;</div>
-            <div class="time">7:55</div>
-            <div class="time">8:35</div>
-            <div class="time">9:15</div>
-            <div class="time">9:55</div>
-            <div class="time time--hidden">10:35</div>
-            <div class="time time--hidden">11:15</div>
-            <div class="time time--hidden">11:55</div>
-            <div class="time time--hidden">12:35</div>
-            <div class="time time--hidden">13:15</div>
-            <div class="time time--hidden">13:55</div>
-            <div class="time time--hidden">14:35</div>
-            <div class="time time--hidden">15:15</div>
-            <div class="time time--hidden">15:55</div>
-            <div class="time-control next-time">&gt;</div>
-        </div>
-    </div>
+    
 
-    <div class="container">
+    <!--div class="container">
         <table class="table table-bordered table-hover table-condensed">
             <thead>
                 <th>№</th>
